--- a/site/index.html
+++ b/site/index.html
@@ -104,13 +104,13 @@
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="html/group/">
-                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                <div class="icon personIcon" style="background-image: url('media/images/pictures/huanna.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="html/group/huanna.html" class="clear bold">Huanna Raquel do Nascimento</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:huanna_nascimento@outlook.com" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
