--- a/site/html/group/huanna.html
+++ b/site/html/group/huanna.html
@@ -54,10 +54,103 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1> Huanna Raquel do Nascimento </h1>
-	<p>Biografia</p> 
-	<p>Curriculo</p>
-	<p>Trabalhos em outras disciplinas (link)</p>
+<h2><img src= "huanna.jpg" alt= "perfil" width = "200" height = "200"/>&nbsp;&nbsp;Huanna Raquel do Nascimento</h2>
+    <h3>Biografia</h3>
+    <p><strong>Cidade de nascimento:</strong> São Paulo-SP</p>
+    <p><strong>Nascimento:</strong> 1993</p>
+    <p><strong>Residência:</strong> Limeira-SP</p>
+
+    <h3>Currículo</h3>
+	<table>
+	<tr>
+	<td valign=top>Dados pessoais&nbsp;&nbsp;&nbsp;&nbsp;</td>
+	<td>Brasileira, solteira, 24 anos<br/>
+	    Contato: (15)99852-5252<br/>
+		Habilitação (carro)B<br/>
+		E-mail: huanna_nascimento@outlook.com<br/>
+		Avenida Leopoldina Ribeiro Moreira Cezar, 393 – Jardim São Paulo – Limeira- SP<br/>
+		CEP: 13183-194<br/>
+		<a href="https://www.facebook.com/huanna.nascimento"><img src= "face.png" alt= "facebook" width = "40" height = "40"/>Facebook</a><br/>
+		<a href="https://www.linkedin.com/in/huanna-nascimento-b9a680106/"><img src= "in.png" alt= "Linkedin" width = "40" height = "40"/>Linkedin</a><br/><br/><br/>
+	</td>
+	</tr>
+	<tr>
+	<td valign=top>Formação acadêmica &nbsp;&nbsp;&nbsp;&nbsp;</td>
+	<td><img src= "unicamp.jpg" alt= "UNICAMP" width = "40" height = "40"/><b>Universidade Estadual de Campinas</b></a><br/>
+	    <b>Nome do diploma:</b>  Sistemas de Informação <br/>
+        <b>Área de estudo:</b>  Tecnologia da Informação<br/>
+        <b>Período (ou ano previsto para a graduação):</b>  2016 – 2020 <br/><br/>
+		<b>EE Plinio Rodrigues de Moraes</b>
+		<b>Nome do diploma:</b>Ensino Médio Completo  <br/>
+        <b>Período (ou ano previsto para a graduação):</b> 2008 – 2010 <br/><br/></br>
+	</td>
+	</tr>
+	<tr>
+	<td valign=top>Idiomas &nbsp;&nbsp;&nbsp;&nbsp;</td>
+	<td> Português fluente<br/>
+	     Inglês Intermediario<br/><br/><br/>
+	</td>
+	</tr>
+	<tr>
+	<td valign=top>Experiencias &nbsp;&nbsp;&nbsp;&nbsp;</td>
+	<td><strong>Bolsista</strong><br/>
+	    <b>Nome da empresa:</b> Unicamp Limeira <br/>
+        <b>Período:</b>  mar de 2017 – o momento <br/>
+        <b>Duração do emprego:</b> 7 meses <br/>
+        <b>Localidade:</b> Limeira e Região, Brasil <br/>
+        <b>Descrição:</b> Suporte às atividades do Laboratório LIAG (Laboratótio de Informática gestão e Aprendizagem). Gerenciamento do ROBOCODE e manutenção de conteúdo e website referente a linha de pesquisa Lean It. <br/><br/><br/>
+	
+	    <strong>Bolsista</strong><br/>
+	    <b>Nome da empresa:</b> Unicamp Limeira <br/>
+        <b>Período:</b> mar de 2016 – mar de 2017  <br/>
+        <b>Duração do emprego:</b> 1 ano 1 mês <br/>
+        <b>Localidade:</b> Limeira e Região, Brasil  <br/>
+	    <b>Descrição:</b>Ambiente Virtual Moodle: um aporte para o ensino de Cálculo I - Parte I <br/><br/><br/>
+		
+		<strong>Bolsista de Iniciação Cientifica</strong><br/>
+	    <b>Nome da empresa:</b> CNPQ<br/>
+        <b>Período:</b>jun de 2013 – jul de 2015  <br/>
+        <b>Duração do emprego:</b> : 2 anos 2 meses  <br/>
+        <b>Localidade:</b>São Paulo e Região, Brasil  <br/>
+	    <b>Descrição:</b>Projeto - Importâncias econômica, industrial e social da Mineração – Brasil no século XXI<br/><br/><br/>
+	</td>
+	</tr>
+	</table>
+	
+    <h3>Trabalhos realizados</h3>
+
+    <ul class="coollist">
+	    <li><span>Primeiro semestre de 2016:</span>
+            <ul>
+                <li>Pesquisa/seminário: <strong>Mercado de Tecnologia e a Crise Economica Bransileira</strong> <em>(para a disciplina de Seminarios I)</em>: [<a href="https://onedrive.live.com/view.aspx?cid=c97a5cc68a367b07&page=view&resid=C97A5CC68A367B07!222&parId=C97A5CC68A367B07!126&app=PowerPoint&wacqt=sharedby" target="bucket">Trabalho</a>]</li>
+            </ul>
+        </li>
+        <li><span>Segundo semestre de 2016:</span>
+            <ul>
+                <li>Pesquisa/seminário: <strong>algoritmo de ordenação bucketsort</strong> <em>(para a disciplina de Estrutura de Dados)</em>: [<a href="https://onedrive.live.com/view.aspx?cid=0182a0ba71dde147&page=view&resid=182A0BA71DDE147!689&parId=182A0BA71DDE147!111&app=PowerPoint&wacqt=sharedby" target="bucket">Trabalho</a>]</li>
+            </ul>
+			<ul>
+                <li>Trabalho/desenvolvimento de programa em C: <strong>Pizzaria Manja Benne</strong> <em>(para a disciplina de Algoritmos e Programação de Computadores II)</em>: [<a href="https://onedrive.live.com/?id=A3D7A33F6F4816B4%21531&cid=A3D7A33F6F4816B4&parId=root&parQt=sharedby&parCid=271568E2EEA44AEE&o=OneUp" target="pizza">Trabalho</a>]</li>
+            </ul>
+        </li>
+        <li><span>Primeiro semestre de 2017:</span>
+            <ul>
+                <li>Projeto: <strong>Caixa Eletronico Aquario (em C)</strong> <em>(para a disciplina de Engenharia de Software II)</em>: [<a href=" https://github.com/leofmt/engenharia2/commits/master " target="es">Repositório</a>]</li>
+            </ul>
+            <ul>
+                <li>Projeto: <strong>Software para realizar a soma das diagonais principais de uma matriz usando múltiplas threads (em C) </strong> <em>(para a disciplina de Sistemas Operacionais): </em><br/>&nbsp;[<a href="https://onedrive.live.com/?id=271568E2EEA44AEE%21122717&cid=271568E2EEA44AEE" target="so">Trabalho</a>]</li>
+            </ul>
+        </li>
+        <li>
+            <span>Segundo semestre de 2017:</span>
+            <ul>
+			    <li>Projeto: <strong>Sistema d´espetos(documentação)</strong> <em>(para a disciplina de Análise de Sistemas I): </em><br/>&nbsp;[<a href="https://onedrive.live.com/?id=271568E2EEA44AEE%21122718&cid=271568E2EEA44AEE" target="ANALI">Trabalho</a>]</li>
+                <li>Projeto: <strong>Sistema Tabacaria</strong> <em>(para a disciplina de Engenharia de softaware III): </em><br/>&nbsp;[<a href="https://ahkkp.bitrix24.com.br/workgroups/group/8/" target="ESIII">Repositório</a>]</li>
+				<li>Projeto: <strong>Sistema de Gerenciamento de biblioteca(em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II): </em><br/>&nbsp;[<a href="https://github.com/henriquemalone/ProjetoJava" target="POOII">Repositório</a>]</li>
+                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">github.com/ALREstevam/Programacao-Web-T1</a>]</li>
+            </ul>
+        </li>
+    </ul>
 
 </section>
 
