--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -53,11 +53,20 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
+    <div class="icon rounded" style="background-image: url('../../media/images/icons/23389143.png')"></div>
     <h2>André Luiz Rodrigues Estevam</h2>
+
     <h3>Biografia</h3>
     <p><strong>Cidade de nascimento:</strong> Registro-SP</p>
     <p><strong>Nascimento:</strong> 1997</p>
     <p><strong>Residência:</strong> Nova Odessa-SP</p>
+
+    <h3>Informações pessoais</h3>
+    <p><strong>E-mail de contato: </strong><a href="mailto:a166348@g.unicamp.br">a166348@g.unicamp.br</a></p>
+    <p><strong>Linkedin: </strong><a href="https://www.linkedin.com/in/andré-luiz-rodrigues-estevam-52998b13b/" target="_blank">linkedin.com/in/andré-luiz-rod...</a></p>
+    <p><strong>GitHub: </strong><a href="https://github.com/ALREstevam" target="_blank">github.com/ALREstevam</a></p>
+
+
 
     <h3>Currículo</h3>
 
