--- a/site/html/group/huanna.html
+++ b/site/html/group/huanna.html
@@ -169,18 +169,18 @@
                 </ul>
             </li>
 
-            <li><a href="">Mídia</a>
+            <li><a href="../media.html">Mídia</a>
                 <ul>
-                    <li><a href="">Audio</a></li>
-                    <li><a href="">Video</a></li>
-                    <li><a href="">Links</a></li>
+                    <li><a href="../media.html#audio">Audio</a></li>
+                    <li><a href="../media.html#video">Video</a></li>
+                    <li><a href="../media.html#links">Links</a></li>
                 </ul>
             </li>
-            <li><a href="">Conceitos utilizados</a>
+            <li><a href="../concepts.html">Conceitos utilizados</a>
                 <ul>
-                    <li><a href="">HTML</a></li>
-                    <li><a href="">CSS</a></li>
-                    <li><a href="">Outros</a></li>
+                    <li><a href="../concepts.html#html">HTML</a></li>
+                    <li><a href="../concepts.html#css">CSS</a></li>
+                    <li><a href="../concepts.html#other">Outros</a></li>
                 </ul>
             </li>
         </ul>
@@ -196,32 +196,8 @@
         <strong>Contato: </strong><a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a><br>
         Projeto no <a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>
     </p>
-
-
-
-
-
-
+    <a href="https://icons8.com">Icon pack by Icons8</a>
 </footer>
-
-
-<!--
-
-[11:47, 11/9/2017] PÁGINA (x1): Página inicial | SEÇÕES: objetivos, formas de contato com o grupo, links para a página de cada membro
-[11:47, 11/9/2017] PÁGINA (x5): Membro do grupo | SEÇÕES: breve currículo e biografia, trabalhos feitos em outras disciplinas
-[11:47, 11/9/2017] PÁGINA (x1): Mídia | SEÇÕES: PARTE1: Links  PARTE 2: vídeos e áudios (talvez indicando para cada item quem o adicionou).
-[11:47, 11/9/2017] PÁGINA (x1): Conceitos HTML e CSS: | SEÇÕES: Conceitos de html não vistos em aula e Conceitos de css não vistos em aula
-
-<div class="flexContent">
-        <div class="box small border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box full border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box medium  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box small  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box small  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-        <div class="box medium border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
-    </div>
-
--->
 
 
 </body>
