--- a/site/html/group.html
+++ b/site/html/group.html
@@ -59,7 +59,7 @@
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="group/andre.html">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/icons8-Customer-96.png')">
+                <div class="icon personIcon" style="background-image: url('../media/images/icons/23389143.png')">
                 </div>
             </a>
             <p class="centralizedText">
@@ -70,8 +70,8 @@
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
-            <a href="group/">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/icons8-Customer-96.png')">
+            <a href="group/huanna.html">
+                <div class="icon personIcon" style="background-image: url('../media/images/pictures/huanna.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
