--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -61,15 +61,13 @@
     <p><strong>Nascimento:</strong> 1997</p>
     <p><strong>Residência:</strong> Nova Odessa-SP</p>
 
-    <h3>Informações pessoais</h3>
+    <h3>Contato</h3>
     <p><strong>E-mail de contato: </strong><a href="mailto:a166348@g.unicamp.br">a166348@g.unicamp.br</a></p>
     <p><strong>Linkedin: </strong><a href="https://www.linkedin.com/in/andré-luiz-rodrigues-estevam-52998b13b/" target="_blank">linkedin.com/in/andré-luiz-rod...</a></p>
     <p><strong>GitHub: </strong><a href="https://github.com/ALREstevam" target="_blank">github.com/ALREstevam</a></p>
 
-
-
     <h3>Currículo</h3>
-
+	<p><strong>Idiomas: </strong><br>Português: Nativo;<br>Inglês: Avançado I.</p>
     <p><strong>Ensino Médio (2013-2015):</strong> ETEC Polivalente de Americana;</p>
     <p><strong>Ensino Técnico (2013-2015):</strong> ETEC Polivalente de Americana - Curso Técnico em Informática;</p>
     <p><strong>Trabalho de Conclusão de Curso:</strong> Software Ekonomi - Plataforma Desktop e Web para gerenciamento de finanças pessoais;</p>
@@ -89,6 +87,9 @@
             </ul>
             <ul>
                 <li>Projeto: <strong>Software para realizar a soma das diagonais de uma matriz usando múltiplas threads (em C) </strong> <em>(para a disciplina de Sistemas Operacionais): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads" target="_blank">github.com/ALREstevam/SO-Soma_de_diagonais_de_matriz_com_threads</a>]</li>
+            </ul>
+			<ul>
+                <li>Desafios da Maratona de Programação (SBC): <strong>Aplicação de algoritmos para a resolução de problemas (em C) </strong> <em>(para a disciplina de Tópicos Especiais em Informática): </em><br/>&nbsp;[<a href="https://drive.google.com/drive/folders/0B-w5V1BqU6H3bno3ZjdON0RCdDA?usp=sharing" target="_blank">drive.google.com/...</a>]</li>
             </ul>
         </li>
         <li>
