--- a/site/html/media.html
+++ b/site/html/media.html
@@ -207,7 +207,7 @@
 		<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=T65y3oj9s50" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/T65y3oj9s50?rel=0&amp;real=0" allowfullscreen class="videobox"></iframe>
                 <strong>APRENDA HTML5 E CSS3 - #2 HTML5 em um vídeo</strong>
             </div>
             <br>
@@ -220,7 +220,7 @@
 		<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=WRcs8rebZtA" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/WRcs8rebZtA?rel=0&amp;real=0" allowfullscreen class="videobox"></iframe>
                 <strong>Curso de HTML5 - 27 - IFRAME em HTML5</strong>
             </div>
             <br>
@@ -233,7 +233,7 @@
 		<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=Z7z8J12hMco&list=PLwXQLZ3FdTVFi6oHo_K4IYDcwCU5-f1x5" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/Z7z8J12hMco?rel=0&amp;real=0" allowfullscreen class="videobox"></iframe>
                 <strong>Design Responsivo - Aula 01 - Preparando Ambiente</strong>
             </div>
             <br>
@@ -246,7 +246,7 @@
 		<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=093dIOCNeIc&list=PLQCmSnNFVYnT1-oeDOSBnt164802rkegc" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/093dIOCNeIc?rel=0&amp;real=0" allowfullscreen class="videobox"></iframe>
                 <strong>Desvendando a linguagem JavaScript - #1 - Introdução - Rodrigo Branas</strong>
             </div>
             <br>
