--- a/site/html/group.html
+++ b/site/html/group.html
@@ -54,7 +54,7 @@
 <!-- CONTEÚDO -->
 <section class="content">
     <h2>Integrantes do grupo</h2>
-    <div class="flexContent flexNoWrap">
+    <div class="flexContent flexNoWrap personOutBox">
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
@@ -87,7 +87,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
@@ -99,7 +99,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
@@ -111,7 +111,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
