--- a/site/index.html
+++ b/site/index.html
@@ -56,11 +56,11 @@
 <!-- CONTEÚDO -->
 <section class="content">
     <div class="icon iconTitle" style="background-image: url('media/images/icons/icons8-Center of Gravity.png'); min-height: 40pt;">
-        <h2>Objetivos</h2>
+        <h2>Objetivos do gupo</h2>
     </div>
 
-    <div>
-        <ul style="display: block">
+    <div style="margin-top: 250px">
+        <ul>
             <li>
                 Aprender as melhores formas de criação de páginas web usando HTML e CSS.
             </li>
@@ -84,7 +84,7 @@
 
 
 
-    <div class="flexContent">
+    <div class="flexContent personOutBox">
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
@@ -117,7 +117,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="html/group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
@@ -129,7 +129,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="html/group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
@@ -141,7 +141,7 @@
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="html/group/" class="clear bold">Nome do Integrante Aqui</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
