--- a/site/html/group.html
+++ b/site/html/group.html
@@ -77,19 +77,19 @@
             <p class="centralizedText">
                 <a href="group/huanna.html" class="clear bold">Huanna Raquel do Nascimento</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:huanna_nascimento@outlook.com" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
-            <a href="group/">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/icons8-Customer-96.png')">
+            <a href="group/karen.html">
+                <div class="icon personIcon" style="background-image: url('../media/images/pictures/karen.jpeg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="group/karen.html" class="clear bold">Karen Esbaile Malzoni Rodrigues</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:k177493@g.unicamp.br" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
