--- a/site/html/group/karen.html
+++ b/site/html/group/karen.html
@@ -78,7 +78,7 @@
     <ul class="coollist">
 	<li><span>Primeiro semestre de 2016:</span>
             <ul>
-                <li>Pesquisa/seminário: <strong>Impacto Social de TI</strong> <em>(para a disciplina de Seminarios I)</em>: [<a href="" target="sem1">Trabalho</a>]</li>
+                <li>Pesquisa/seminário: <strong>Impacto Social de TI</strong> <em>(para a disciplina de Seminários I)</em>: [<a href="" target="sem1">Trabalho</a>]</li>
             </ul>
 			<ul>
                 <li>Pesquisa: <strong>Viabilidade da Implementação de um Sistema Fotovoltaico em uma República de Estudantes na Região de Piracicaba </strong> <em>(para a disciplina de Metodologia do Trabalho Científico)</em>: [<a href="https://1drv.ms/w/s!Akfh3XG6oIIBgn6aEz-AOktEUCiY" target="metodologia">Trabalho</a>]</li>
@@ -86,7 +86,7 @@
         </li>
         <li><span>Segundo semestre de 2016:</span>
             <ul>
-                <li>Pesquisa/seminário: <strong>Algorítmo de Ordenação Bucketsort</strong> <em>(para a disciplina de Estrutura de Dados)</em>: [<a href="https://1drv.ms/p/s!Akfh3XG6oIIBhTEPmKOcReT-fwYf" target="bucket">Trabalho</a>]</li>
+                <li>Pesquisa/seminário: <strong>Algorítmo de Ordenação BucketSort</strong> <em>(para a disciplina de Estrutura de Dados I)</em>: [<a href="https://1drv.ms/p/s!Akfh3XG6oIIBhTEPmKOcReT-fwYf" target="bucket">Trabalho</a>]</li>
             </ul>
 			<ul>
                 <li>Trabalho/desenvolvimento de programa em C: <strong>Pizzaria Manja Benne</strong> <em>(para a disciplina de Algoritmos e Programação de Computadores II)</em>: [<a href="https://1drv.ms/u/s!Akfh3XG6oIIBhhhVLKx2iNJbvUvq" target="pizza">Trabalho</a>]</li>
@@ -94,7 +94,7 @@
         </li>
         <li><span>Primeiro semestre de 2017:</span>
             <ul>
-                <li>Projeto: <strong>Caixa Eletronico Aquario (em C)</strong> <em>(para a disciplina de Engenharia de Software II)</em>: [<a href=" https://github.com/leofmt/engenharia2/commits/master " target="es">Repositório</a>]</li>
+                <li>Projeto: <strong>Caixa Eletrônico Aquário (em C)</strong> <em>(para a disciplina de Engenharia de Software II)</em>: [<a href=" https://github.com/leofmt/engenharia2/commits/master " target="es">Repositório</a>]</li>
             </ul>
             <ul>
                 <li>Projeto: <strong>Software para realizar a soma das diagonais principais de uma matriz usando múltiplas threads (em C) </strong> <em>(para a disciplina de Sistemas Operacionais): </em><br/>&nbsp;[<a href="https://1drv.ms/u/s!Akfh3XG6oIIBhhcc8PbnwN2Ybow2" target="so">Trabalho</a>]</li>
@@ -103,10 +103,10 @@
         <li>
             <span>Segundo semestre de 2017:</span>
             <ul>
-			    <li>Projeto: <strong>Sistema d´espetos(documentação)</strong> <em>(para a disciplina de Análise de Sistemas I): </em><br/>&nbsp;[<a href="https://onedrive.live.com/?id=271568E2EEA44AEE%21122718&cid=271568E2EEA44AEE" target="ANALI">Trabalho</a>]</li>
-                <li>Projeto: <strong>Sistema Tabacaria</strong> <em>(para a disciplina de Engenharia de softaware III): </em><br/>&nbsp;[<a href="https://ahkkp.bitrix24.com.br/workgroups/group/8/" target="ESIII">Repositório</a>]</li>
+			    <li>Projeto: <strong>Sistema d´espetos(documentação)</strong> <em>(para a disciplina de Análise de Sistemas I): </em><br/>&nbsp;[<a href="https://1drv.ms/u/s!Akfh3XG6oIIBhhlGsqJ4FeBGJqXX" target="ANALI">Trabalho</a>]</li>
+                <li>Projeto: <strong>Sistema Tabacaria</strong> <em>(para a disciplina de Engenharia de Software III): </em><br/>&nbsp;[<a href="https://ahkkp.bitrix24.com.br/workgroups/group/8/" target="ESIII">Repositório</a>]</li>
 				<li>Projeto: <strong>Sistema de Gerenciamento de biblioteca(em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II): </em><br/>&nbsp;[<a href="https://github.com/henriquemalone/ProjetoJava" target="POOII">Repositório</a>]</li>
-                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">github.com/ALREstevam/Programacao-Web-T1</a>]</li>
+                <li>Projeto: <strong>Site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">Repositório</a>]</li>
             </ul>
         </li>
     </ul>
