adicionando icones e atualizando index e group

--- a/site/index.html
+++ b/site/index.html
@@ -112,14 +112,14 @@
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
-            <a href="html/group/">
-                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+            <a href="html/group/mayara.html">
+                <div class="icon personIcon" style="background-image: url('media/images/pictures/mulhericon.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Integrante Aqui</a>
+                <a href="html/group/mayara.html" class="clear bold">Mayara Naomi F. Ramos</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:m184517@g.unicamp.br" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
