--- a/site/html/group.html
+++ b/site/html/group.html
@@ -82,14 +82,14 @@
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
-            <a href="group/">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/icons8-Customer-96.png')">
+            <a href="group/mayara.html">
+                <div class="icon personIcon" style="background-image: url('../media/images/pictures/mulhericon.png')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Integrante Aqui</a>
+                <a href="group/mayara.html" class="clear bold">Mayara Naomi F. Ramos</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:m184517@g.unicamp.br" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
