--- a/site/html/group.html
+++ b/site/html/group.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -83,7 +83,7 @@
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="group/mayara.html">
-                <div class="icon personIcon" style="background-image: url('../media/images/pictures/mulhericon.png')">
+                <div class="icon personIcon" style="background-image: url('../media/images/pictures/mulhericon.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
