--- a/site/html/group/mayara.html
+++ b/site/html/group/mayara.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Programação Web</title>
+    <title>ProgramaÃ§Ã£o Web</title>
 
     <link rel="shortcut icon" href="../../media/images/icons/mulhericon.jpg" type="image/x-icon">
     <link rel="icon" href="../../media/images/icons/mulhericon.jpg" type="image/x-icon">
@@ -23,7 +23,7 @@
 </head>
 <body class="resetBody">
 
-<!-- CABEÇALHO -->
+<!-- CABEÃ‡ALHO -->
 <header>
 
     <div class="swapBg" onclick="nextSheet('swappableCss');">
@@ -42,16 +42,16 @@
         <!-- MENU -->
         <nav class="menu">
             <ul>
-                <li><a href="../../index.html">Página inicial</a></li>
+                <li><a href="../../index.html">PÃ¡gina inicial</a></li>
                 <li><a href="../group.html">Grupo</a></li>
-                <li><a href="../media.html">Mídia</a></li>
+                <li><a href="../media.html">MÃ­dia</a></li>
                 <li><a href="../concepts.html">Conceitos utilizados</a></li>
             </ul>
         </nav>
     </div>
 </header>
 
-<!-- CONTEÚDO -->
+<!-- CONTEÃšDO -->
 <section class="content">
     <div class="icon rounded" style="background-image: url('../../media/images/pictures/mulhericon.jpg')"></div>
     <h2> Mayara Naomi F. Ramos</h2>
@@ -59,18 +59,18 @@
     <h3>Biografia</h3>
     <p><strong>Cidade de nascimento:</strong> Limeira-SP</p>
     <p><strong>Nascimento:</strong> 1998</p>
-    <p><strong>Residência:</strong> Iracemápolis-SP</p>
+    <p><strong>ResidÃªncia:</strong> IracemÃ¡polis-SP</p>
 
     <h3>Contato</h3>
     <p><strong>E-mail de contato: </strong><a href="mailto:m184517@g.unicamp.br">m184517@g.unicamp.br</a></p>
     <a href="https://www.linkedin.com/in/mayara-naomi-fustaino-ramos-3132a4113/"><img src= "../../media/images/pictures/in.png" alt= "Linkedin" width = "40" height = "40"/>Linkedin</a><br/><br/><br/>
     <a href="https://github.com/mayaranfr"><img src= "../../media/images/pictures/icongithub.png" alt= "GitHub" width = "40" height = "40"/>Github</a><br/><br/><br/>
 
-    <h3>Currículo</h3>
-	<p><strong>Idiomas: </strong><br>Português: Nativo;<br>Inglês: Básico</p>
-    <p><strong>Ensino Médio (2013-2015):</strong> Colégio Técnico de Limeira - COTIL;</p>
-    <p><strong>Ensino Técnico (2013-2015):</strong> Colégio Técnico de Limeira COTIL - Curso Técnico em Informática;</p>
-    <p><strong>Graduação (2016-):</strong> Faculdade de Tecnologia da Unicamp (Limeira)- Bacharelado em Sistemas de Informação;</p>
+    <h3>CurrÃ­culo</h3>
+	<p><strong>Idiomas: </strong><br>PortuguÃªs: Nativo;<br>InglÃªs: BÃ¡sico</p>
+    <p><strong>Ensino MÃ©dio (2013-2015):</strong> ColÃ©gio TÃ©cnico de Limeira - COTIL;</p>
+    <p><strong>Ensino TÃ©cnico (2013-2015):</strong> ColÃ©gio TÃ©cnico de Limeira COTIL - Curso TÃ©cnico em InformÃ¡tica;</p>
+    <p><strong>GraduaÃ§Ã£o (2016-):</strong> Faculdade de Tecnologia da Unicamp (Limeira)- Bacharelado em Sistemas de InformaÃ§Ã£o;</p>
 
     <h3>Trabalhos realizados</h3>
 
@@ -87,8 +87,8 @@
         <li>
             <span>Segundo semestre de 2017:</span>
             <ul>
-                <li>Projeto: <strong>gerenciamento de visita a clientes para vidraçaria (em Java)</strong> <em>(para a disciplina de Programação Orientada a Objetos II): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria" target="_blank">GitHub</a>]</li>
-                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de Programação para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>]</li>
+                <li>Projeto: <strong>gerenciamento de visita a clientes para vidraÃ§aria (em Java)</strong> <em>(para a disciplina de ProgramaÃ§Ã£o Orientada a Objetos II): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/POOII-Gerenc-Visitas-Vidracaria" target="_blank">GitHub</a>]</li>
+                <li>Projeto: <strong>site para grupo de estudantes (HTML5, CSS3 e Javascript)</strong> <em>(para a disciplina de ProgramaÃ§Ã£o para a Web): </em><br/>&nbsp;[<a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>]</li>
             </ul>
         </li>
     </ul>
@@ -99,10 +99,10 @@
     <nav class="sideMenu">
         <ul>
 
-            <li><a href="../../index.html">Página inicial</a></li>
+            <li><a href="../../index.html">PÃ¡gina inicial</a></li>
             <li><a href="../group.html">Grupo</a>
                 <ul>
-                    <li><a href="andre.html">André</a></li>
+                    <li><a href="andre.html">AndrÃ©</a></li>
                     <li><a href="mayara.html">Mayara</a></li>
                     <li><a href="pedro.html">Pedro</a></li>
                     <li><a href="huanna.html">Huanna</a></li>
@@ -110,7 +110,7 @@
                 </ul>
             </li>
 
-            <li><a href="../media.html">Mídia</a>
+            <li><a href="../media.html">MÃ­dia</a>
                 <ul>
                     <li><a href="../media.html#audio">Audio</a></li>
                     <li><a href="../media.html#video">Video</a></li>
@@ -135,7 +135,7 @@
 <!-- FOOTER -->
 <footer class="footer centralizedText">
     <p>
-        Website desenvolvido para a disciplina de Programação Web<br>
+        Website desenvolvido para a disciplina de ProgramaÃ§Ã£o Web<br>
         <strong>Contato: </strong><a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a><br>
         Projeto no <a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>
     </p>
