--- a/site/html/media.html
+++ b/site/html/media.html
@@ -285,7 +285,7 @@
         	<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/epDCjksKMok" allowfullscreen class="videobox"></iframe>
                 <strong>Curso de HTML5 - 00 - Site Completo - by Gustavo Guanabara</strong>
             </div>
             <br>
@@ -298,7 +298,7 @@
         	<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=F7KzJ7e6EAc&list=PLHz_AreHm4dm4beCCCmW4xwpmLf6EHY9k" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/F7KzJ7e6EAc" allowfullscreen class="videobox"></iframe>
                 <strong>História do PHP - Curso PHP Iniciante #01 - Gustavo Guanabara</strong>
             </div>
             <br>
@@ -311,7 +311,7 @@
         	<!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/watch?v=RBZcNiBAVwM&list=PLlMH0iwc_TF_pGBO9ifyRaZiCs_NYUIuO" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/RBZcNiBAVwM" allowfullscreen class="videobox"></iframe>
                 <strong>Curso de CSS - Aula 1 (Introdução ao CSS)</strong>
             </div>
             <br>
