Adicionando documentos .html

--- a/site/html/group.html
+++ b/site/html/group.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -83,13 +83,13 @@
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="group/">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/icons8-Customer-96.png')">
+                <div class="icon personIcon" style="background-image: url('../media/images//pictures/pedro.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Nome do Integrante Aqui</a>
+                <a href="group/" class="clear bold">Pedro Artico Rodrigues</a>
             </p>
-            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">e-mail</a>
         </div>
 
         <!-- PESSOA -->
