--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -76,7 +76,8 @@
     <h3>Trabalhos realizados</h3>
 
     <ul class="coollist">
-        <li><span>Segundo semestre de 2016:</span>
+        <li>
+            <span>Segundo semestre de 2016:</span>
             <ul>
                 <li>Pesquisa/seminário: <strong>algoritmo de ordenação quicksort</strong> <em>(para a disciplina de Estrutura de Dados)</em>: [<a href="https://1drv.ms/f/s!AvKd5zYHvusR1FyE7bcObMYbzwqu" target="_blank">OneDrive</a>]</li>
             </ul>
