corrigindo caminho do favicon

--- a/site/html/group/mayara.html
+++ b/site/html/group/mayara.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Programação Web</title>
 
-    <link rel="shortcut icon" href="../../media/images/icons/mulhericon.jpg" type="image/x-icon">
-    <link rel="icon" href="../../media/images/icons/mulhericon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
+    <link rel="icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
 
     <script src="../../js/swapCss.js">
     </script>
