--- a/site/html/group/huanna.html
+++ b/site/html/group/huanna.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Programação Web</title>
 
-    <link rel="icon" href="" type="image/gif" sizes="16x16">
+    <link rel="shortcut icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
+    <link rel="icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
 
     <script src="../../js/swapCss.js">
     </script>
